Icebox : CSS FIX Sirv stretch mobile

--- a/src/scss/modules/pages/product.scss
+++ b/src/scss/modules/pages/product.scss
@@ -161,6 +161,19 @@
 
   > div {
     width: 100%;
+    height: 100%;
+  }
+
+  canvas {
+    width: 100%;
+    aspect-ratio: 1/1;
+    height: auto !important;
+  }
+
+  .Sirv {
+    @include maxWidthXs {
+      pointer-events: none;
+    }
   }
 
   img {
